PRMT-2799: Prevent Java warnings from misuse of Arrays.asList method